force-app/main/default/objects/custom_create239__c/custom_create239__c.object-meta.xml
<CustomObject>
    <label>Custom created object239</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects239</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>