force-app/main/default/objects/custom_create239__c/fields/custom_create_239field534__c.field-meta.xml
<CustomField>
    <fullName>custom_create_239field534__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 239field534</label>
    <type>Checkbox</type>
</CustomField>